--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header class="headerStyle">
         <div class="header">
             <img src="https://avatars.githubusercontent.com/u/116178175?s=400&u=38fcc910570b46963f38e46f4b9765d90910d8a8&v=4" alt="Profil avatar">
-            <h1>Khanetski Yauhen</h1>
+            <div class="navAndName">
+                <nav class="headerNav"><p><a href="https://xats89.github.io/rsschool-cv/cv"><img src="https://w7.pngwing.com/pngs/817/219/png-transparent-curriculum-vitae-management-afacere-cornell-university-logo-curriculum-vitae-template-miscellaneous-text-trademark.png" alt="cv link"></a></p></nav>
+                <h1>Khanetski Yauhen</h1>
+            </div>
         </div>
     </header>
     <main class="mainStyle">
@@ -20,7 +23,7 @@
                     <thead>
                         <tr>
                             <td colspan="2">
-                            Contacts:
+                            <h2>Contacts:</h2>
                             </td>
                         </tr>
                     </thead>
@@ -47,16 +50,18 @@
                         </tr>
                     </tbody>
                 </table>
+                <hr />
                 <div class="skills">
-                    <strong>Skills:</strong>
+                    <h2>Skills:</h2>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript (Basic)</li>
                     </ul>
                 </div>
+                <hr />
                 <div class="language">
-                    <strong>Language:</strong>
+                    <h2>Language:</h2>
                     <ul>
                         <li>Russian - natine</li>
                         <li>English - A2</li>
@@ -64,24 +69,27 @@
                 </div>
         </section>
         <article class="rightBlock">       
-            <div>
-                <strong>About me</strong>
+            <div class="aboutMe">
+                <h2>About me:</h2>
                 <p>I am a sociable, decent, responsible person. I take courses to gain new knowledge and skills. I want to learn a new profession. In the future I want to apply my skills in interesting projects.</p>
             </div>
-            <div>
-                <strong>Code Example</strong>
+            <hr />
+            <div class="codeExample">
+                <h2>Code Example:</h2>
                 <blockquote>
                     function multiply(a, b){<br>
                     return a * b<br>
                     }
                 </blockquote>
             </div>
-            <div>
-                <strong>Expiriens</strong>
-                <p>Nothing yet...</p>
+            <hr />
+            <div class="expiriens">
+                <h2>Expiriens:</h2>
+                <p>Nothing yet... &#128517</p>
             </div>
-            <div>
-                <strong>Education and courses</strong>
+            <hr />
+            <div class="education">
+                <h2>Education and courses:</h2>
                 <ul>
                     <li><a href="https://www.bsuir.by/">Belarusian State University of Informatics and Radioelectronics</a></li>
                     <li>Оnline tutorial JavaScript: <a href="https://learn.javascript.ru/">https://learn.javascript.ru/</a> (in the process)</li>
@@ -90,5 +98,10 @@
             </div>
         </article>
     </main>
+    <footer class="footerStyle">
+        <p class="logoRS"><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="logo RSSchool"></a></p>
+        <p class="logoGitHub"><a href="https://github.com/Xats89"><img src="https://miro.medium.com/max/1200/1*4j8t0VplZ4eZn9jnHCclsQ.jpeg" alt="github link"></a></p>
+        <p>december 2022</p>
+    </footer>
 </body>
 </html>
