fix: contacts and navigation sections as in the task

--- a/index.html
+++ b/index.html
@@ -10,46 +10,31 @@
 <body class="bodyStyle">
     <header class="headerStyle">
         <div class="header">
-            <img src="https://avatars.githubusercontent.com/u/116178175?s=400&u=38fcc910570b46963f38e46f4b9765d90910d8a8&v=4" alt="Profil avatar">
+            <img src="https://avatars.githubusercontent.com/u/116178175?s=400&u=38fcc910570b46963f38e46f4b9765d90910d8a8&v=4" alt="Profil_avatar">
             <div class="navAndName">
-                <nav class="headerNav"><p><a href="https://xats89.github.io/rsschool-cv/cv"><img src="https://w7.pngwing.com/pngs/817/219/png-transparent-curriculum-vitae-management-afacere-cornell-university-logo-curriculum-vitae-template-miscellaneous-text-trademark.png" alt="cv link"></a></p></nav>
+                <nav class="headerNav">
+                    <ul>
+                        <li>
+                            <p><a href="https://xats89.github.io/rsschool-cv/cv"><img src="https://w7.pngwing.com/pngs/817/219/png-transparent-curriculum-vitae-management-afacere-cornell-university-logo-curriculum-vitae-template-miscellaneous-text-trademark.png" alt="cv_link"></a></p>
+                        </li>
+                    </ul>
+                </nav>
                 <h1>Khanetski Yauhen</h1>
             </div>
         </div>
     </header>
     <main class="mainStyle">
         <section class="leftBlock">
-                <table class="contacts">
-                    <thead>
-                        <tr>
-                            <td colspan="2">
-                            <h2>Contacts:</h2>
-                            </td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Location:</td>
-                            <td>Minsk, Belarus</td>
-                        </tr>
-                        <tr>
-                            <td>Phone:</td>
-                            <td>+37529 5676063</td>
-                        </tr>
-                        <tr>
-                            <td>E-mail:</td>
-                            <td>xats89@gmail.com</td>
-                        </tr>
-                        <tr>
-                            <td>GitHub</td>
-                            <td>Xats89</td>
-                        </tr>
-                        <tr>
-                            <td>Discord:</td>
-                            <td>Zheka (@Xats89)</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="contacts">
+                <h2>Contacts:</h2>
+                <ul>
+                    <li>Location: Minsk, Belarus</li>
+                    <li>Phone: +37529 5676063</li>
+                    <li>E-mail: xats89@gmail.com</li>
+                    <li>GitHub: Xats89</li>
+                    <li>Discord: Zheka (@Xats89)</li>
+                </ul>
+            </div>
                 <hr />
                 <div class="skills">
                     <h2>Skills:</h2>
@@ -85,7 +70,7 @@
             <hr />
             <div class="expiriens">
                 <h2>Expiriens:</h2>
-                <p>Nothing yet... &#128517</p>
+                <p>Nothing yet... &#128517;</p>
             </div>
             <hr />
             <div class="education">
