fix: add expiriens

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </ul>
                 </div>
         </section>
-        <article class="rightBlock">       
+        <article class="rightBlock">
             <div class="aboutMe">
                 <h2>About me:</h2>
                 <p>I am a sociable, decent, responsible person. I take courses to gain new knowledge and skills. I want to learn a new profession. In the future I want to apply my skills in interesting projects.</p>
@@ -70,7 +70,14 @@
             <hr>
             <div class="expiriens">
                 <h2>Expiriens:</h2>
-                <p>Nothing yet... &#128517;</p>
+                <ul>
+                    <li>
+                        <a href="https://app.rs.school/certificate/v0ohiv43" class="expiriens_links">RS School Stage0</a>
+                    </li>
+                    <li>
+                        <a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a>
+                    </li>
+                </ul>
             </div>
             <hr>
             <div class="education">
