docs: fix Expiriens and Education and courses

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <h2>Expiriens:</h2>
                 <ul>
                     <li>
-                        <a href="https://app.rs.school/certificate/v0ohiv43" class="expiriens_links">RS School Stage0</a>
+                        <a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a>
                     </li>
                     <li>
-                        <a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a>
+                        <a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q1/shelter/" class="expiriens_links">Shelter</a>
                     </li>
                 </ul>
             </div>
@@ -85,6 +85,7 @@
                 <ul>
                     <li><a href="https://www.bsuir.by/">Belarusian State University of Informatics and Radioelectronics</a></li>
                     <li>Оnline tutorial JavaScript: <a href="https://learn.javascript.ru/">https://learn.javascript.ru/</a> (in the process)</li>
+                    <li><a href="https://app.rs.school/certificate/v0ohiv43" class="expiriens_links">RS School Stage0</a></li>
                     <li><a href="https://www.youtube.com/watch?v=CxgOKJh4zWE&t=838s">Video tutorials JS from Bogdan Stashchuk</a></li>
                 </ul>
             </div>
@@ -93,7 +94,7 @@
     <footer class="footerStyle">
         <p class="logoRS"><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="logo RSSchool"></a></p>
         <p class="logoGitHub"><a href="https://github.com/Xats89"><img src="https://miro.medium.com/max/1200/1*4j8t0VplZ4eZn9jnHCclsQ.jpeg" alt="github link"></a></p>
-        <p>december 2022</p>
+        <p>november 2023</p>
     </footer>
 </body>
 </html>
