--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <article class="rightBlock">
             <div class="aboutMe">
                 <h2>About me:</h2>
-                <p>I am a sociable, decent, responsible person. I take courses to gain new knowledge and skills. I want to learn a new profession. In the future I want to apply my skills in interesting projects.</p>
+                <p>I am a sociable, decent, responsible person. I take courses to gain new knowledge and skills. I want to learn a new profession and apply my skills in interesting projects. In the future I want to improve my English level and learn the backend.</p>
             </div>
             <hr>
             <div class="codeExample">
