--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JavaScript (Basic)</li>
+                        <li>JavaScript</li>
                     </ul>
                 </div>
                 <hr>
@@ -71,12 +71,9 @@
             <div class="expiriens">
                 <h2>Expiriens:</h2>
                 <ul>
-                    <li>
-                        <a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a>
-                    </li>
-                    <li>
-                        <a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q1/shelter/" class="expiriens_links">Shelter</a>
-                    </li>
+                    <li><a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a></li>
+                    <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q1/shelter/" class="expiriens_links">Shelter</a></li>
+                    <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q4/coffee-house/" class="expiriens_links">Coffee House</a></li>
                 </ul>
             </div>
             <hr>
