feat: add expiriens link 'hangman'

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="expiriens">
                 <h2>Expiriens:</h2>
                 <ul>
+                    <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q4/hangman/" class="expiriens_links">Hangman</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q1/shelter/" class="expiriens_links">Shelter</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q4/coffee-house/" class="expiriens_links">Coffee House</a></li>
