feat: add nonograms link

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="expiriens">
                 <h2>Expiriens:</h2>
                 <ul>
+                    <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q4/nonograms/" class="expiriens_links">Nonograms</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q4/hangman/" class="expiriens_links">Hangman</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFEPRESCHOOL2022Q4/plants/" class="expiriens_links">Plants</a></li>
                     <li><a href="https://rolling-scopes-school.github.io/xats89-JSFE2023Q1/shelter/" class="expiriens_links">Shelter</a></li>
@@ -84,6 +85,7 @@
                     <li><a href="https://www.bsuir.by/">Belarusian State University of Informatics and Radioelectronics</a></li>
                     <li>Оnline tutorial JavaScript: <a href="https://learn.javascript.ru/">https://learn.javascript.ru/</a> (in the process)</li>
                     <li><a href="https://app.rs.school/certificate/v0ohiv43" class="expiriens_links">RS School Stage0</a></li>
+                    <li>RS School JSFE2023Q4 (stage1 is done, stage2 in the progress)</li>
                     <li><a href="https://www.youtube.com/watch?v=CxgOKJh4zWE&t=838s">Video tutorials JS from Bogdan Stashchuk</a></li>
                 </ul>
             </div>
